# Ekumen-Challenge

./: Instructions.txt  commands.txt  frames.gv
devel/: setup.sh
devel/include/ekumen_exe1/: Num.h  Path_pos.h  RecordingResponse.h
devel/lib/ekumen_exe1/: listener  move_base  recording_client  recording_server  recording_server_v2  recording_server_v3  recording_server_v4  talker  turtle_tf_broadcaster  turtle_tf_listener  turtle_tf_listener_rec
devel/lib/pkgconfig/: ekumen_exe1.pc
devel/lib/python2.7/dist-packages/ekumen_exe1/msg/: _Num.py  _Path_pos.py  __init__.py
devel/share/common-lisp/ros/ekumen_exe1/msg/: Num.lisp  Path_pos.lisp  _package.lisp  _package_Path_pos.lisp  ekumen_exe1-msg.asd
devel/share/common-lisp/ros/ekumen_exe1/srv/: _package.lisp  ekumen_exe1-srv.asd
devel/share/ekumen_exe1/cmake/: ekumen_exe1-msg-paths.cmake  ekumen_exe1Config.cmake
devel/share/gennodejs/ros/ekumen_exe1/msg/: Num.js  Path_pos.js  _index.js
devel/share/gennodejs/ros/ekumen_exe1/srv/: _index.js
devel/share/roseus/ros/ekumen_exe1/: manifest.l
devel/share/roseus/ros/ekumen_exe1/msg/: Num.l  Path_pos.l
devel/share/roseus/ros/ekumen_exe1/srv/: Recording.l
install/: _setup_util.py  setup.sh
install/include/ekumen_exe1/: Recording.h  RecordingRequest.h
install/lib/python2.7/dist-packages/ekumen_exe1/srv/: _Recording.py  __init__.py
install/share/common-lisp/ros/ekumen_exe1/msg/: _package.lisp  _package_Num.lisp  ekumen_exe1-msg.asd
install/share/common-lisp/ros/ekumen_exe1/srv/: Recording.lisp  _package_Recording.lisp
install/share/ekumen_exe1/cmake/: ekumen_exe1-msg-extras.cmake  ekumen_exe1-msg-paths.cmake  ekumen_exe1Config.cmake
install/share/gennodejs/ros/ekumen_exe1/srv/: Recording.js
install/share/roseus/ros/ekumen_exe1/: manifest.l
src/ekumen_exe1/: CMakeLists.txt  CMakeLists_template.txt  package.xml  start_ekumen_demo.launch  start_tf_demo.launch  start_tf_demo_1.launch  start_tf_demo_orig.launch
src/ekumen_exe1/src/: move_base.cpp  recording_client.cpp  recording_client_v1.cpp  recording_server.cpp  recording_server_v1.cpp  recording_server_v2.cpp  recording_server_v3.cpp  recording_server_v4.cpp  talker.cpp  turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp  turtle_tf_listener_rec.cpp
src/ekumen_exe1/srv/: Recording.srv
